--- a/homeworks/hw1/hw1_Q2_a.ipynb
+++ b/homeworks/hw1/hw1_Q2_a.ipynb
@@ -180,8 +180,8 @@
     }
    },
    "source": [
+    "from models.BinaryPixelCNN import BinaryPixelCNN\n",
     "from torch.optim import Adam\n",
-    "from models.ColoredPixelCNN import ColoredPixelCNN\n",
     "from utils import rescale_tensor\n",
     "import torch\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
@@ -212,7 +212,7 @@
     "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    x_test = x_test.to(device)\n",
     "\n",
-    "    model = ColoredPixelCNN(filters=64)\n",
+    "    model = BinaryPixelCNN(filters=64)\n",
     "    model.to(device)\n",
     "\n",
     "    optimizer = Adam(model.parameters(), lr=learning_rate)\n",
