adds basic q3, q5 solutions

--- a/homeworks/hw1/hw1_Q3_ab.ipynb
+++ b/homeworks/hw1/hw1_Q3_ab.ipynb
@@ -69,7 +69,6 @@
     "from deepul.hw1_helper import (\n",
     "    # Q3\n",
     "    q3ab_save_results,\n",
-    "    q3c_save_results,\n",
     ")"
    ],
    "outputs": [],
@@ -144,7 +143,6 @@
     "from torch.optim import Adam\n",
     "from models.IGPTModel import IGPTModel\n",
     "import torch\n",
-    "from utils import rescale_tensor\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
     "\n",
     "\n",
@@ -155,39 +153,44 @@
     "    image_shape: (H, W, 1), height, width, and # of channels of the image\n",
     "    dset_id: An identifying number of which dataset is given (1 or 2). Most likely\n",
     "           used to set different hyperparameters for different datasets\n",
-    "    \n",
+    "\n",
     "    Returns\n",
     "    - a (# of training iterations,) numpy array of train_losses evaluated every minibatch\n",
     "    - a (# of epochs + 1,) numpy array of test_losses evaluated once at initialization and after each epoch\n",
     "    - a numpy array of size (100, H, W, 1) of samples with values in {0, 1}\n",
     "    \"\"\"\n",
     "    batch_size = 128\n",
-    "    learning_rate = 0.001\n",
-    "    max_epochs = 100\n",
     "\n",
-    "    # rescale from 0/1 to -1/+1\n",
-    "    train_dataset = TensorDataset(rescale_tensor(torch.tensor(train_data).permute((0, 3, 1, 2)).float(), (0, 1), (-1,+1)))\n",
+    "    learning_rate = 0.001\n",
+    "    max_epochs = 25\n",
+    "\n",
+    "    train_dataset = TensorDataset(torch.tensor(train_data).permute((0, 3, 1, 2)).float())\n",
     "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "    x_test = rescale_tensor((torch.tensor(test_data).permute((0, 3, 1, 2)).float()), (0, 1), (-1, +1))\n",
+    "\n",
+    "    def transform(x):\n",
+    "        x_flat = torch.flatten(x, start_dim=1)\n",
+    "        return torch.cat((2 * torch.ones(x_flat.shape[0], 1).to(x_flat.device), x_flat), dim=1).long()\n",
+    "\n",
+    "    x_test = transform(torch.tensor(test_data).permute((0, 3, 1, 2)).float())\n",
     "\n",
     "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    x_test = x_test.to(device)\n",
     "\n",
-    "    model = IGPTModel()\n",
+    "    model = IGPTModel(max_sequence_length=20 * 20 + 1)\n",
     "    model.to(device)\n",
     "\n",
     "    optimizer = Adam(model.parameters(), lr=learning_rate)\n",
-    "    train_losses = []\n",
-    "    test_losses = []\n",
+    "    train_losses = [0]\n",
+    "    test_losses = [0]\n",
     "    for epoch in range(max_epochs):\n",
     "        batches = iter(train_loader)\n",
     "\n",
     "        batch_train_loss = np.empty(len(batches))\n",
     "        for i, [batch_x] in enumerate(batches):\n",
-    "            batch_x = batch_x.to(device)\n",
+    "            batch_x = transform(batch_x.to(device))\n",
     "            logits = model.forward(batch_x)\n",
     "\n",
-    "            loss = model.loss_function(batch_x, logits)\n",
+    "            loss = model.loss_function(logits, batch_x)\n",
     "            batch_train_loss[i] = loss\n",
     "\n",
     "            loss.backward()\n",
@@ -198,7 +201,7 @@
     "        model.eval()\n",
     "        with torch.no_grad():\n",
     "            test_logits = model.forward(x_test)\n",
-    "            test_loss = model.loss_function(x_test, test_logits)\n",
+    "            test_loss = model.loss_function(test_logits, x_test)\n",
     "            test_losses.append(test_loss.item())\n",
     "        model.train()\n",
     "        print(f\"epoch {epoch + 1}/{max_epochs}, train loss: {train_losses[-1]}, test loss: {test_losses[-1]}\")\n",
