--- a/homeworks/hw1/hw1_Q5.ipynb
+++ b/homeworks/hw1/hw1_Q5.ipynb
@@ -13,15 +13,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T03:46:46.804435Z",
+     "start_time": "2024-11-06T03:46:46.801128Z"
+    }
+   },
    "source": [
     "# get to the parent dir of mai_dul repo\n",
     "import os\n",
-    "os.chdir('../../')\n",
+    "# os.chdir('../../')\n",
     "os.getcwd()"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ordem/PycharmProjects/MAI_DUL_WS24/homeworks/hw1'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -33,16 +49,18 @@
     "# !unzip -qq homeworks/hw1/data/hw1_data.zip -d homeworks/hw1/data/\n",
     "\n",
     "# install latest version deepul package\n",
-    "!pip install -e ."
+    "# !pip install -e ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "metadata": {
-    "id": "ZHWosWrbpO5Y"
+    "id": "ZHWosWrbpO5Y",
+    "ExecuteTime": {
+     "end_time": "2024-11-06T03:46:53.384655Z",
+     "start_time": "2024-11-06T03:46:51.677027Z"
+    }
    },
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from deepul.hw1_helper import (\n",
@@ -50,7 +68,9 @@
     "    visualize_q5_data,\n",
     "    q5a_save_results,\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -73,12 +93,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T03:46:54.011207Z",
+     "start_time": "2024-11-06T03:46:54.002378Z"
+    }
+   },
    "source": [
     "data = visualize_q5_data()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample 1\n",
+      "Michael Anania, Tracings from Selected Poems. Copyright  1994 by Michael Anania. Used by permission of Asphodel Press/Acorn Alliance.\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "Sample 2\n",
+      "When to the sessions of sweet silent thought\r\n",
+      "I summon up remembrance of things past,\r\n",
+      "I sigh the lack of many a thing I sought,\r\n",
+      "And with old woes new wail my dear time's waste:\r\n",
+      "Then can I drown an eye, unus'd to flow,\r\n",
+      "For precious friends hid in death's dateless night,\r\n",
+      "And weep afresh love's long since cancell'd woe,\r\n",
+      "And moan th' expense of many a vanish'd sight;\r\n",
+      "Then can I grieve at grievances foregone,\r\n",
+      "And heavily from woe to woe tell o'er\r\n",
+      "The sad account of fore-bemoaned moan,\r\n",
+      "Which I new pay as if not paid before.\r\n",
+      "But if the while I think on thee, dear friend,\r\n",
+      "All losses are restor'd, and sorrows end.\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "Sample 3\n",
+      "Adieu, farewell, earths bliss;\r\n",
+      "This world uncertain is;\r\n",
+      "Fond are lifes lustful joys;\r\n",
+      "Death proves them all but toys;\r\n",
+      "None from his darts can fly;\r\n",
+      "I am sick, I must die.\r\n",
+      "   Lord, have mercy on us!\r\n",
+      "\r\n",
+      "Rich men, trust not in wealth,\r\n",
+      "Gold cannot buy you health;\r\n",
+      "Physic himself must fade.\r\n",
+      "All things to end are made,\r\n",
+      "The plague full swift goes by;\r\n",
+      "I am sick, I must die.\r\n",
+      "   Lord, have mercy on us!\r\n",
+      "\r\n",
+      "Beauty is but a flower\r\n",
+      "Which wrinkles will devour;\r\n",
+      "Brightness falls from the air;\r\n",
+      "Queens have died young and fair;\r\n",
+      "Dust hath closed Helens eye.\r\n",
+      "I am sick, I must die.\r\n",
+      "   Lord, have mercy on us!\r\n",
+      "\r\n",
+      "Strength stoops unto the grave,\r\n",
+      "Worms feed on Hectors brave;\r\n",
+      "Swords may not fight with fate,\r\n",
+      "Earth still holds ope her gate.\r\n",
+      "Come, come! the bells do cry.\r\n",
+      "I am sick, I must die.\r\n",
+      "   Lord, have mercy on us.\r\n",
+      "\r\n",
+      "Wit with his wantonness\r\n",
+      "Tasteth deaths bitterness;\r\n",
+      "Hells executioner\r\n",
+      "Hath no ears for to hear\r\n",
+      "What vain art can reply.\r\n",
+      "I am sick, I must die.\r\n",
+      "   Lord, have mercy on us.\r\n",
+      "\r\n",
+      "Haste, therefore, each degree,\r\n",
+      "To welcome destiny;\r\n",
+      "Heaven is our heritage,\r\n",
+      "Earth but a players stage;\r\n",
+      "Mount we unto the sky.\r\n",
+      "I am sick, I must die.\r\n",
+      "   Lord, have mercy on us.\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "Sample 4\n",
+      "The trade-wind jingles the rings in the nets around the racks by the docks on Indian River.\r\n",
+      "It is the same jingle of the water among roots under the banks of the palmettoes,\r\n",
+      "It is the same jingle of the red-bird breasting the orange-treesout of the cedars.\r\n",
+      "Yet there is no spring in Florida, neither in boskage perdu, nor on the nunnery beaches.\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -111,16 +221,65 @@
    "outputs": [],
    "source": [
     "def q5_a(train_text, test_text):\n",
-    "  \"\"\"\n",
-    "  train_text: list[str] Train text sequences.\n",
-    "  test_text: list[str] Test text sequences.\n",
-    "\n",
-    "  Returns\n",
-    "  - a (# of training iterations,) numpy array of train_losses evaluated every minibatch\n",
-    "  - a (# of epochs + 1,) numpy array of test_losses evaluated once at initialization and after each epoch\n",
-    "  - a list of 5 (str), 5 generated samples from the model.\n",
-    "  \"\"\"\n",
-    "  return train_losses, test_losses, text_samples"
+    "    \"\"\"\n",
+    "    train_text: list[str] Train text sequences.\n",
+    "    test_text: list[str] Test text sequences.\n",
+    "    \n",
+    "    Returns\n",
+    "    - a (# of training iterations,) numpy array of train_losses evaluated every minibatch\n",
+    "    - a (# of epochs + 1,) numpy array of test_losses evaluated once at initialization and after each epoch\n",
+    "    - a list of 5 (str), 5 generated samples from the model.\n",
+    "    \"\"\"\n",
+    "    batch_size = 128\n",
+    "    learning_rate = 0.00001\n",
+    "    max_epochs = 50\n",
+    "    context_length = 128\n",
+    "    vocabulary = [\"<bos>\", *list(set(\"\".join(train_text + test_text))), \"<eos>\"]\n",
+    "    vocab_to_index = {value: index + 1 for index, value in enumerate(vocabulary)}\n",
+    "    \n",
+    "    x_train = [item for text in train_text for item in [0, *[vocab_to_index[c] for c in text], len(vocabulary) - 1]]\n",
+    "    x_test = [item for text in train_text for item in [0, *[vocab_to_index[c] for c in text], len(vocabulary) - 1]]\n",
+    "    x_train = create_non_overlapping_windows(x_train, context_length, len(vocabulary) - 1).T\n",
+    "    x_test = create_non_overlapping_windows(x_test, context_length, len(vocabulary) - 1).T\n",
+    "    \n",
+    "    train_dataset = TensorDataset(x_train)\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "    \n",
+    "    device =  torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    x_test = x_test.to(device)\n",
+    "    \n",
+    "    model = GATModel(vocab_size=len(vocabulary))\n",
+    "    model.to(device)\n",
+    "    \n",
+    "    optimizer = Adam(model.parameters(), lr=learning_rate)\n",
+    "    train_losses = []\n",
+    "    test_losses = []\n",
+    "    for epoch in range(max_epochs):\n",
+    "        batches = iter(train_loader)\n",
+    "    \n",
+    "        batch_train_loss = np.empty(len(batches))\n",
+    "        for i, [batch_x] in enumerate(batches):\n",
+    "            batch_x = batch_x.to(device)\n",
+    "            logits = model.forward(batch_x)\n",
+    "    \n",
+    "            loss = model.loss_function(logits, batch_x)\n",
+    "            batch_train_loss[i] = loss\n",
+    "    \n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            optimizer.zero_grad()\n",
+    "        train_losses.append(batch_train_loss.mean().item())\n",
+    "    \n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            test_logits = model.forward(x_test)\n",
+    "            test_loss = model.loss_function(test_logits, x_test)\n",
+    "            test_losses.append(test_loss.item())\n",
+    "        model.train()\n",
+    "        print(f\"epoch {epoch + 1}/{max_epochs}, train loss: {train_losses[-1]}, test loss: {test_losses[-1]}\")\n",
+    "    samples = model.generate(5, max_sequence_length=128, device=device).numpy(force=True)\n",
+    "    text_samples = [\"\".join([vocabulary[vi] for vi in sample]) for sample in samples]\n",
+    "    return train_losses, test_losses, text_samples"
    ]
   },
   {
