--- a/homeworks/hw1/hw1_Q5.ipynb
+++ b/homeworks/hw1/hw1_Q5.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "# get to the parent dir of mai_dul repo\n",
     "import os\n",
+    "\n",
     "# os.chdir('../../')\n",
     "os.getcwd()"
    ],
@@ -220,6 +221,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "from models.GATModel import GATModel\n",
+    "from torch.optim import Adam\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "import math\n",
+    "import torch\n",
+    "\n",
+    "\n",
+    "def create_non_overlapping_windows(tokens, context_size, padding):\n",
+    "    tokens_tensor = torch.tensor(tokens)\n",
+    "    padded_length = context_size * math.ceil(len(tokens) / context_size)\n",
+    "    return torch.cat((tokens_tensor, torch.full((padded_length - len(tokens),), padding)), dim=0).unflatten(0, (\n",
+    "    context_size, padded_length // context_size))\n",
+    "\n",
+    "\n",
     "def q5_a(train_text, test_text):\n",
     "    \"\"\"\n",
     "    train_text: list[str] Train text sequences.\n",
@@ -236,40 +252,40 @@
     "    context_length = 128\n",
     "    vocabulary = [\"<bos>\", *list(set(\"\".join(train_text + test_text))), \"<eos>\"]\n",
     "    vocab_to_index = {value: index + 1 for index, value in enumerate(vocabulary)}\n",
-    "    \n",
+    "\n",
     "    x_train = [item for text in train_text for item in [0, *[vocab_to_index[c] for c in text], len(vocabulary) - 1]]\n",
     "    x_test = [item for text in train_text for item in [0, *[vocab_to_index[c] for c in text], len(vocabulary) - 1]]\n",
     "    x_train = create_non_overlapping_windows(x_train, context_length, len(vocabulary) - 1).T\n",
     "    x_test = create_non_overlapping_windows(x_test, context_length, len(vocabulary) - 1).T\n",
-    "    \n",
+    "\n",
     "    train_dataset = TensorDataset(x_train)\n",
     "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "    \n",
-    "    device =  torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    x_test = x_test.to(device)\n",
-    "    \n",
+    "\n",
     "    model = GATModel(vocab_size=len(vocabulary))\n",
     "    model.to(device)\n",
-    "    \n",
+    "\n",
     "    optimizer = Adam(model.parameters(), lr=learning_rate)\n",
     "    train_losses = []\n",
     "    test_losses = []\n",
     "    for epoch in range(max_epochs):\n",
     "        batches = iter(train_loader)\n",
-    "    \n",
+    "\n",
     "        batch_train_loss = np.empty(len(batches))\n",
     "        for i, [batch_x] in enumerate(batches):\n",
     "            batch_x = batch_x.to(device)\n",
     "            logits = model.forward(batch_x)\n",
-    "    \n",
+    "\n",
     "            loss = model.loss_function(logits, batch_x)\n",
     "            batch_train_loss[i] = loss\n",
-    "    \n",
+    "\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            optimizer.zero_grad()\n",
     "        train_losses.append(batch_train_loss.mean().item())\n",
-    "    \n",
+    "\n",
     "        model.eval()\n",
     "        with torch.no_grad():\n",
     "            test_logits = model.forward(x_test)\n",
